[metadata]
name = dnsintel
version = 0.1.0
description = A comprehensive DNS intelligence and reconnaissance tool
long_description = file: README.md
long_description_content_type = text/markdown
author = Your Name
author_email = your.email@example.com
url = https://github.com/yourusername/dnsintel
license = MIT
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    Intended Audience :: System Administrators
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11

[options]
packages = find:
python_requires = >=3.8
install_requires =
    dnspython>=2.3.0
    python-whois>=0.8.0
    cryptography>=41.0.0
    requests>=2.31.0
    colorama>=0.4.6
    tabulate>=0.9.0

[options.packages.find]
where = .
include = dnsintel*

[options.entry_points]
console_scripts =
    dnsintel = dnsintel.cli:main

[options.extras_require]
dev =
    pytest>=7.4.0
    pytest-cov>=4.1.0
    black>=23.7.0
    flake8>=6.1.0
    mypy>=1.5.0

[flake8]
max-line-length = 100
exclude = .git,__pycache__,build,dist,.eggs
ignore = E203,W503

[mypy]
python_version = 3.8
warn_return_any = True
warn_unused_configs = True
disallow_untyped_defs = True

